realyze deleting item  in orders

--- a/langs/am.json
+++ b/langs/am.json
@@ -87,6 +87,7 @@
           "header" : {
                "my_orders" : "ԻՄ ՊԱՏՎԵՐՆԵՐԸ",
                "confirm" : "Հաստատել",
+               "review" : "Գնահատել",
                "nav" : [
                     "Ամբողջը",
                     "Ընդունված",
@@ -97,7 +98,8 @@
                "order_item_header": {
                     "number" :"Պատվերի համար",
                     "price" : "Պատվերի արժեք",
-                    "status" : "Պատվերի վիճակ"
+                    "status" : "Պատվերի վիճակ",
+                    "remove":"Հեռացնել"
                }
           }
       },
