Evaluation of products from the user after ordering

--- a/langs/am.json
+++ b/langs/am.json
@@ -93,7 +93,8 @@
                     "Ընդունված",
                     "ՈՒղարկված",
                     "Կատարված",
-                    "Ստացած"
+                    "Ստացած",
+                    "Ավարտված"
                ],
                "order_item_header": {
                     "number" :"Պատվերի համար",
