--- a/langs/am.json
+++ b/langs/am.json
@@ -56,6 +56,7 @@
       },
       "product_page" : {
           "content" : {
+              "review" : "Կարծիք",
               "reviews" : "Կարծիքներ",
               "add_review" : "Ավելացնել Կարծիք",
               "add_to_cart" : "Ավ. Զամբյուղ",
