create mosest products in home Page

--- a/langs/am.json
+++ b/langs/am.json
@@ -36,6 +36,12 @@
               "money" : "ԳՈՒՄԱՐԻ ՎԵՐԱԴԱՐՁԻ ԵՐԱՇԽԻՔ",
               "discount" : "ԶԵՂՉ ԱՌԱՋԻՆ ՊԱՏՎԵՐԻ ՀԱՄԱՐ"
           },
+          "mostest" : [
+            "RECENT",
+            "POPULAR",
+            "DESIRED",
+            "TOP RATED"
+          ],
           "newest" : "ԱՄԵՆԱՆՈՐ ԱՊՐԱՆՔՆԵՐԸ"
       },
       "details" : {
