--- a/langs/am.json
+++ b/langs/am.json
@@ -28,7 +28,7 @@
               }
           },
           "carousel" : {
-              "shop_now" : "ԳՆԵԼ"
+              "shop_now" : "ԱՅՑԵԼԵԼ"
           },
           "services_part" : {
               "free_shipping" : "ԱՆՎՃԱՐ ԱՌԱՔՈՒՄ",
