--- a/langs/en.json
+++ b/langs/en.json
@@ -27,7 +27,7 @@
             }
         },
         "carousel" : {
-            "shop_now" : "SHOP NOW"
+            "shop_now" : "VISIT"
         },
         "services_part" : {
             "free_shipping" : "FREE SHIPPING ALL ORDER",
