first iteration off footer

--- a/langs/am.json
+++ b/langs/am.json
@@ -1,15 +1,22 @@
 
 {
      "header" : {
-          "home" : "Գլխավոր",
-          "about": "ՄԵՐ ՄԱՍԻՆ",
-          "admin": "Ադմին",
-          "signup": "Գրանցում",
-          "profile": "Պրոֆիլ",
-          "my_profile": "Իմ Պրոֆիլ",
-          "my_orders": "Իմ Պատվերները",
-          "login": "Մուտք",
-          "logout": "Ելք"
+        "hello" : "Բարև",
+        "menu_burger" : {
+            "home" : "Գլխավոր",
+            "about": "ՄԵՐ ՄԱՍԻՆ",
+            "admin": "Ադմին",
+            "signup": "Գրանցում",
+            "profile": "Պրոֆիլ",
+            "my_profile": "Իմ Պրոֆիլ",
+            "my_orders": "Իմ Պատվերները",
+            "login": "Մուտք",
+            "logout": "Ելք"
+        }
+      },
+      "navigation" : {
+        "select" : "Ընտրել Կատեգորիան",
+        "search" : "Փնտրել ապրանք..."
       },
       "product_item" : {
           "sale": "Զեղչ",
@@ -36,12 +43,20 @@
               "money" : "ԳՈՒՄԱՐԻ ՎԵՐԱԴԱՐՁԻ ԵՐԱՇԽԻՔ",
               "discount" : "ԶԵՂՉ ԱՌԱՋԻՆ ՊԱՏՎԵՐԻ ՀԱՄԱՐ"
           },
-          "mostest" : [
-            "RECENT",
-            "POPULAR",
-            "DESIRED",
-            "TOP RATED"
-          ],
+          "mostest_products" : {
+            "mostest" : "ԱՄԵՆԱ ԱՊՐԱՆՔՆԵՐԸ",
+            "products" : [
+                "ԹԱՐՄ",
+                "ՊՈՊՈՒԼԱՐ",
+                "ՇԱՀԱՎԵՏ",
+                "ԳՆԱՀԱՏԱԿԱՆ"
+            ]
+          },
+          "latest_blog":{
+                "latest":"ՎԵՐՋԻՆ ԲԼՈԳԸ",
+                "read_more":"Կարդալ Ավելին"
+          },
+          "viewed" : "ԴԻՏՎԱԾ ԱՊՐԱՆՔՆԵՐ",
           "newest" : "ԱՄԵՆԱՆՈՐ ԱՊՐԱՆՔՆԵՐԸ"
       },
       "details" : {
@@ -58,6 +73,7 @@
               "Գնահատական ։ Սկզբում Ամենացածրը",
               "Գնահատական ։ Սկզբում Ամենաբարձրը"
           ],
+          "filter" : "ՖԻԼՏՐ",
           "filter_price" : "ՖԻԼՏՐԵԼ ԸՍՏ ԳՆԻ"
       },
       "product_page" : {
@@ -73,6 +89,13 @@
               "sold" : "Վաճառված է",
               "pcs" : "հատ"
      
+          },
+          "review": {
+                "header" : {
+                    "description" : "ԲՆՈՒԹԱԳԻՐ",
+                    "reviews" : "ԿԱՐԾԻՔՆԵՐ", 
+                    "recommendation" : "ՆՄԱՆԱՏԻՊ"
+                }
           },
           "home" : "ԳԼԽԱՎՈՐ",
           "best_seller" : "ԱՄԵՆԱՇԱՏ ՎԱՃԱՌՎԱԾՆԵՐԸ"
@@ -162,28 +185,38 @@
           "inc_val": "Սխալ արժեք",
           "buy_info" : "Ձեր գործարքը կատարվեց"
       },
+      "personal" : {
+        "menu_bar" : {
+            "general":"ԳԼԽԱՎՈՐ",
+            "orders":"ՊԱՏՎԵՐՆԵՐ",
+            "products":"ԱՊՐԱՆՔՆԵՐ",
+            "personal":"ՏՎ․ ՓՈՓՈԽՈՒԹՅՈՒՆ",
+            "reviews":"ԿԱՐԾԻՔՆԵՐ"
+        }
+      },
       "footer" : {
-          "about" : [
-              "Ինֆորմացիա",
-              "Մեր Մասին",
-              "Գաղտնիություն",
-              "Գնման Եղանակներ",
-              "Օնլայն Օգնություն"
-          ],
-          "my_account" : [
-              "Իմ Կայքը",
-              "Մուտք",
-              "Իմ Զամբյուղը",
-              "Ցանկալի Ապրանքներ",
-              "Գնել"
-          ],
-          "information" : [
-              "Information",
-              "Specials",
-              "Նոր Ապրանքներ",
-              "Ամենաշատ Գնված Ապրանքներ",
-              "Մեր Խանութները"
-          ],
+          "information" : {
+              "info":"ՏԵՂԵԿԱՏՎՈՒԹՅՈՒՆ",
+              "about":"Մեր Մասին",
+              "privacy":"Գաղտնիություն",
+              "payment":"Գնման Եղանակներ",
+              "online":"Օնլայն Օգնություն"
+          },
+          "my_account" : {
+              "site":"Իմ Կայքը",
+              "login":"Մուտք",
+              "logout":"Ելք",
+              "cart":"Իմ Զամբյուղը",
+              "wishlist":"Ցանկալի Ապրանքներ",
+              "checkout":"Գնել"
+          },
+          "services" : {
+              "all":"ԲՈԼՈՐ ԾԱՌԱՅՈՒԹՅՈՒՆՆԵՐԸ",
+              "laser":"Լազերային փորագրություն",
+              "plotter":"Փլոտերային աշխատանք",
+              "print":"Տպագրություն",
+              "brosh":"Բրոշների պատրաստում"
+          },
           "orders" : [
               "Պատվերները",
               "Վճարման Եղանակներ",
