finish modifying the  footer and start refactoring the code

--- a/langs/am.json
+++ b/langs/am.json
@@ -217,13 +217,17 @@
               "print":"Տպագրություն",
               "brosh":"Բրոշների պատրաստում"
           },
-          "orders" : [
-              "Պատվերները",
-              "Վճարման Եղանակներ",
-              "Գնում և Առաքում",
-              "Ապրանքի Վերադարձ",
-              "Առևտուր"
-          ]          
+          "orders" : {
+              "all":"Պատվերները",
+              "payment_methods":"Վճարման Եղանակներ",
+              "shipping":"Գնում և Առաքում",
+              "product_return":"Ապրանքի Վերադարձ",
+              "money_return":"Գումարի վերադարձ"
+          },
+          "down" : {
+            "copyright" : "Հեղինակային Իրավունք",
+            "rights":"Բոլոր իրավունքները պաշտպանված են"
+          }          
       }
 }
 
