refactoring the code

--- a/langs/am.json
+++ b/langs/am.json
@@ -80,7 +80,6 @@
           "content" : {
               "review" : "Կարծիք",
               "reviews" : "Կարծիքներ",
-              "add_review" : "Ավելացնել Կարծիք",
               "add_to_cart" : "Ավ. Զամբյուղ",
               "quantity" : "Քանակ",
               "name":"Անվանում",
@@ -97,6 +96,7 @@
                     "recommendation" : "ՆՄԱՆԱՏԻՊ"
                 }
           },
+          "missing": "Կարծիքները բացակայում են",
           "home" : "ԳԼԽԱՎՈՐ",
           "best_seller" : "ԱՄԵՆԱՇԱՏ ՎԱՃԱՌՎԱԾՆԵՐԸ"
       },
