update the language .json files

--- a/langs/am.json
+++ b/langs/am.json
@@ -191,7 +191,100 @@
             "orders":"ՊԱՏՎԵՐՆԵՐ",
             "products":"ԱՊՐԱՆՔՆԵՐ",
             "personal":"ՏՎ․ ՓՈՓՈԽՈՒԹՅՈՒՆ",
-            "reviews":"ԿԱՐԾԻՔՆԵՐ"
+            "reviews":"ԿԱՐԾԻՔՆԵՐ",
+            "logout":"ԵԼՔ"
+        }
+      },
+      "admin" : {
+        "menu_bar" : {
+            "dashboard":"ՍՏԱՏԻՍՏԻԿԱ",
+            "administrator":"ԱԴՄԻՆԻՍՏՐԱՏՈՐ",
+            "orders":"ՊԱՏՎԵՐՆԵՐ",
+            "products":"ԱՊՐԱՆՔՆԵՐ",
+            "change":"ՏՎ․ ՓՈՓՈԽՈՒԹՅՈՒՆ",
+            "reviews":"ԿԱՐԾԻՔՆԵՐ",
+            "logout":"ԵԼՔ"
+        },
+        "total_infos" :{
+            "order_received" : "ՍՏԱՑՎԱԾ ՊԱՏՎԵՐՆԵՐ",
+            "total_charges" : "ԸՆԴՀԱՆՈՒՐ ԳՈՒՄԱՐ",
+            "total_users" : "ԸՆԴՀԱՆՈՒՐ ՕԳՏԱՏԵՐԵՐ"
+        },
+        "charts" : {
+            "orders":{
+                "header":"ՎԱՃԱՌՎԱԾ ԱՊՐԱՆՔՆԵՐԻ ՔԱՆԱԿՆԵՐՆ ԸՍՏ ԺԱՄԱՆԱԿԻ",
+                "order" : "Պատվերներ"
+            },
+            "products":{
+                "header":"ՎԱՃԱՌՎԱԾ ԱՊՐԱՆՔՆԵՐԻ ՔԱՆԱԿՆԵՐԸ ԸՍՏ ԿԱՏԵԳՈՐԻԱՆԵՐԻ",
+                "product" : "Ապրանքներ"
+            },
+            "time":{
+                "year":"Տարի",
+                "month":"Ամիս"
+            }
+        },
+        "orders" : {
+            "newest_orders" : "ՆՈՐ ՊԱՏՎԵՐՆԵՐ",
+            "all_orders" : "ԲՈԼՈՐ ՊԱՏՎԵՐՆԵՐԸ",
+            "header" : [
+                "Համար",
+                "Պատվիրատու",
+                "Բջջային",
+                "Մեկնաբանություն",
+                "Արժեք",
+                "Ստատուս",
+                "Գործողություն",
+                "Գործողություն"
+            ],
+            "actions" : {
+                "update":"Թարմացնել",
+                "delete":"Վերացնել"
+            }
+        },
+        "products" : {
+            "all_products" : "ԲՈԼՈՐ ԱՊՐԱՆՔՆԵՐԸ",
+
+            "header" : [
+                "Համար",
+                "Կատեգորիա",
+                "Ալիաս",
+                "Կատ. Անուն",
+                "Անվանում",
+                "Գին",
+                "Զեղչ",
+                "Գնահատական",
+                "Թարմացնել",
+                "Վերացնել"
+            ],
+            "actions" : {
+                "update":"Թարմացնել",
+                "delete":"Վերացնել"
+            },
+            "create":"Ստեղծել Ապրանք",
+            "product_create_page" : {
+                "placeholders" : {
+                    "select_category":"Ընտրել Կատեգորիա",
+                    "description" : "Մուտքագրել Անվանում",
+                    "text" : "Մուտքագրել Նկարագրություն",
+                    "price" : "Մուտքագրել Գինը",
+                    "discount" : "Մուտքագրել Զեղչը",
+                    "articul" : "Մուտքագրել արտիկուլ"
+                },
+                "headers" : {
+                    "cat_index" : "Կատեգորիայի Ինդեքս",
+                    "name" : "Անվանում",
+                    "description" : "Նկարագրություն",
+                    "price" : "Գին",
+                    "discount" : "Զեղչ",
+                    "articul" : "1c Արտիկուլ",
+                    "insert_pictures" : "Կցել Լուսանկար",
+                    "current_pictures" : "Ընթացիկ Լուսանկար",
+                    "save" : "Պահպանել"
+
+                }
+            }
+
         }
       },
       "footer" : {
