add similar products in product page and fix langauges bugs

--- a/langs/am.json
+++ b/langs/am.json
@@ -74,7 +74,8 @@
               "Գնահատական ։ Սկզբում Ամենաբարձրը"
           ],
           "filter" : "ՖԻԼՏՐ",
-          "filter_price" : "ՖԻԼՏՐԵԼ ԸՍՏ ԳՆԻ"
+          "filter_price" : "ՖԻԼՏՐԵԼ ԸՍՏ ԳՆԻ",
+          "home" : "ԳԼԽԱՎՈՐ"
       },
       "product_page" : {
           "content" : {
@@ -92,13 +93,14 @@
           "review": {
                 "header" : {
                     "description" : "ԲՆՈՒԹԱԳԻՐ",
-                    "reviews" : "ԿԱՐԾԻՔՆԵՐ", 
-                    "recommendation" : "ՆՄԱՆԱՏԻՊ"
+                    "reviews" : "ԿԱՐԾԻՔՆԵՐ"
                 }
           },
           "missing": "Կարծիքները բացակայում են",
           "home" : "ԳԼԽԱՎՈՐ",
-          "best_seller" : "ԱՄԵՆԱՇԱՏ ՎԱՃԱՌՎԱԾՆԵՐԸ"
+          "best_seller" : "ԱՄԵՆԱՇԱՏ ՎԱՃԱՌՎԱԾՆԵՐԸ",
+          "similar" : "ՆՄԱՆԱՏԻՊ ԱՊՐԱՆՔՆԵՐ"
+
       },
       "cart" : {
           "cart" : "ԶԱՄԲՅՈՒՂ",
