developing caching for a request to the server

--- a/langs/am.json
+++ b/langs/am.json
@@ -132,6 +132,7 @@
                     "number" :"Պատվերի համար",
                     "price" : "Պատվերի արժեք",
                     "status" : "Պատվերի վիճակ",
+                    "time" : "Պատվերի ժամանակ",
                     "remove":"Հեռացնել"
                }
           }
