creating block of reviews for admin panel

--- a/langs/am.json
+++ b/langs/am.json
@@ -245,6 +245,23 @@
                 "delete":"Վերացնել"
             }
         },
+        "reviews" : {
+            "all_reviews" : "ԲՈԼՈՐ ԿԱՐԾԻՔՆԵՐԸ",
+            "header" : [
+                "Համար",
+                "Օգտատեր",
+                "Պատվերի N",
+                "Ապրանքի N",
+                "Կարծիք",
+                "Գնահատական",
+                "Գործողություն",
+                "Գործողություն"
+            ],
+            "actions" : {
+                "update":"Պատասխանել",
+                "delete":"Վերացնել"
+            }
+        },
         "products" : {
             "all_products" : "ԲՈԼՈՐ ԱՊՐԱՆՔՆԵՐԸ",
 
