reply to a review in the admin panel

--- a/langs/am.json
+++ b/langs/am.json
@@ -258,9 +258,10 @@
                 "Գործողություն"
             ],
             "actions" : {
-                "update":"Պատասխանել",
+                "reply":"Պատասխանել",
                 "delete":"Վերացնել"
-            }
+            },
+            "footer" : "Պահպանել"
         },
         "products" : {
             "all_products" : "ԲՈԼՈՐ ԱՊՐԱՆՔՆԵՐԸ",
