deleted caches files

--- a/langs/am.json
+++ b/langs/am.json
@@ -206,6 +206,7 @@
             "products":"ԱՊՐԱՆՔՆԵՐ",
             "change":"ՏՎ․ ՓՈՓՈԽՈՒԹՅՈՒՆ",
             "reviews":"ԿԱՐԾԻՔՆԵՐ",
+            "list":"ՑԱՆԿԻ ԱՎԵԼԱՑՈՒՄ",
             "logout":"ԵԼՔ"
         },
         "total_infos" :{
@@ -304,6 +305,10 @@
                     "save" : "Պահպանել"
 
                 }
+            },
+            "product_from_list" : {
+                "insert_file" : "Կցել ֆայլ",
+                "save" : "Պահպանել"
             }
 
         }
