homepage bug fix first rev

--- a/langs/am.json
+++ b/langs/am.json
@@ -9,7 +9,6 @@
             "signup": "Գրանցում",
             "profile": "Պրոֆիլ",
             "my_profile": "Իմ Պրոֆիլ",
-            "my_orders": "Իմ Պատվերները",
             "login": "Մուտք",
             "logout": "Ելք"
         }
@@ -48,7 +47,7 @@
             "products" : [
                 "ԹԱՐՄ",
                 "ՊՈՊՈՒԼԱՐ",
-                "ՇԱՀԱՎԵՏ",
+                "ՑԱՆԿԱԼԻ",
                 "ԳՆԱՀԱՏԱԿԱՆ"
             ]
           },
@@ -85,6 +84,7 @@
               "quantity" : "Քանակ",
               "name":"Անվանում",
               "availability" : "Հասնելիություն",
+              "description" : "Նկարագրություն",
               "category" : "Կատեգորիա",
               "sold" : "Վաճառված է",
               "pcs" : "հատ"
@@ -195,6 +195,7 @@
             "products":"ԱՊՐԱՆՔՆԵՐ",
             "personal":"ՏՎ․ ՓՈՓՈԽՈՒԹՅՈՒՆ",
             "reviews":"ԿԱՐԾԻՔՆԵՐ",
+            "card":"ԿՑՎԱԾ ՔԱՐՏԵՐ",
             "logout":"ԵԼՔ"
         }
       },
@@ -287,7 +288,9 @@
             "product_create_page" : {
                 "placeholders" : {
                     "select_category":"Ընտրել Կատեգորիա",
-                    "description" : "Մուտքագրել Անվանում",
+                    "description" : "Մուտքագրել հայերեն Անվանում",
+                    "description_eng" : "Մուտքագրել Անգլերեն Անվանում",
+                    "description_rus" : "Մուտքագրել Ռուսերեն Անվանում",
                     "text" : "Մուտքագրել Նկարագրություն",
                     "price" : "Մուտքագրել Գինը",
                     "discount" : "Մուտքագրել Զեղչը",
@@ -296,6 +299,8 @@
                 "headers" : {
                     "cat_index" : "Կատեգորիայի Ինդեքս",
                     "name" : "Անվանում",
+                    "name_eng" : "Անվանում Անգլերեն",
+                    "name_rus" : "Անվանում Ռուսերեն",
                     "description" : "Նկարագրություն",
                     "price" : "Գին",
                     "discount" : "Զեղչ",
@@ -303,7 +308,6 @@
                     "insert_pictures" : "Կցել Լուսանկար",
                     "current_pictures" : "Ընթացիկ Լուսանկար",
                     "save" : "Պահպանել"
-
                 }
             },
             "product_from_list" : {
@@ -327,14 +331,13 @@
               "logout":"Ելք",
               "cart":"Իմ Զամբյուղը",
               "wishlist":"Ցանկալի Ապրանքներ",
-              "checkout":"Գնել"
+              "viewed":"Դիտված Ապրանքներ"
           },
           "services" : {
               "all":"ԲՈԼՈՐ ԾԱՌԱՅՈՒԹՅՈՒՆՆԵՐԸ",
               "laser":"Լազերային փորագրություն",
               "plotter":"Փլոտերային աշխատանք",
-              "print":"Տպագրություն",
-              "brosh":"Բրոշների պատրաստում"
+              "tshirt":"Շապիկների Տպագրություն"
           },
           "orders" : {
               "all":"Պատվերները",
