create Galery page, filter products from subcategories and bug fixes

--- a/langs/am.json
+++ b/langs/am.json
@@ -223,6 +223,7 @@
             "products":"ԱՊՐԱՆՔՆԵՐ",
             "change":"ՏՎ․ ՓՈՓՈԽՈՒԹՅՈՒՆ",
             "reviews":"ԿԱՐԾԻՔՆԵՐ",
+            "gallery":"ՏԵՍԱԴԱՐԱՆ",
             "list":"ՑԱՆԿԻ ԱՎԵԼԱՑՈՒՄ",
             "logout":"ԵԼՔ"
         },
@@ -331,6 +332,11 @@
                 "save" : "Պահպանել"
             }
 
+        },
+        "gallery" : {
+            "name" : "Անվանում",
+            "insert_file" :"Կցել Նկար",
+            "save" : "Պահպանել"
         }
       },
       "footer" : {
