--- a/langs/am.json
+++ b/langs/am.json
@@ -219,6 +219,8 @@
         "menu_bar" : {
             "dashboard":"ՍՏԱՏԻՍՏԻԿԱ",
             "administrator":"ԱԴՄԻՆԻՍՏՐԱՏՈՐ",
+            "category":"ԿԱՏԵԳՈՐԻԱ",
+            "subCategory":"ԵՆԹԱԿԱՏԵԳՈՐԻԱ",
             "orders":"ՊԱՏՎԵՐՆԵՐ",
             "products":"ԱՊՐԱՆՔՆԵՐ",
             "change":"ՏՎ․ ՓՈՓՈԽՈՒԹՅՈՒՆ",
@@ -245,6 +247,59 @@
                 "year":"Տարի",
                 "month":"Ամիս"
             }
+        },
+        "category" : {
+            "all_categories" : "ԲՈԼՈՐ ԿԱՏԵԳՈՐԻԱՆԵՐԸ",
+            "header" : [
+                "Համար",
+                "Ալիաս",
+                "Անվանում",
+                "Անվանում-Ռուս",
+                "Անվանում-Անգ",
+                "Գործողություն",
+                "Գործողություն"
+            ],
+            "actions" : {
+                "update":"Թարմացնել",
+                "delete":"Վերացնել"
+            },
+            "create":"Ստեղծել Կատեգորիա",
+            "category_create_page" : {
+                "placeholders" : {
+                    "alias":"Ընտրել Ալիաս",
+                    "select_sub_category":"Ընտրել Ենթակատեգորիա",
+                    "description" : "Մուտքագրել հայերեն Անվանում",
+                    "description_eng" : "Մուտքագրել Անգլերեն Անվանում",
+                    "description_rus" : "Մուտքագրել Ռուսերեն Անվանում"
+                },
+                "headers" : {
+                    "alias" : "Ալիաս",
+                    "name" : "Անվանում",
+                    "name_eng" : "Անվանում Անգլերեն",
+                    "name_rus" : "Անվանում Ռուսերեն",
+                    "description" : "Նկարագրություն",
+                    "save" : "Պահպանել"
+                }
+            }
+        },
+        "sub_category" : {
+            "all_sub_categories" : "ԲՈԼՈՐ ԵՆԹԱԿԱՏԵԳՈՐԻԱՆԵՐԸ",
+            "header" : [
+                "Համար",
+                "Կատեգորիայի N",
+                "Ենթակատ. N",
+                "Ալիաս",
+                "Անվանում",
+                "Անվանում-Ռուս",
+                "Անվանում-Անգ",
+                "Գործողություն",
+                "Գործողություն"
+            ],
+            "actions" : {
+                "update":"Թարմացնել",
+                "delete":"Վերացնել"
+            },
+            "create":"Ստեղծել Ենթակատեգորիա"
         },
         "orders" : {
             "newest_orders" : "ՆՈՐ ՊԱՏՎԵՐՆԵՐ",
